Adding <h1> headers to body.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   
   <head>
-      <title> Ben's Page! </title>
+     <title> Ben's Page! </title>
   </head> 
   
   <body>
-      Hello there, awesome person!
+     <h1> Hello there, awesome person! </h1>
   </body>
   
 </html>
