--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   
   <body>
      <h1> Hello there, awesome person! </h1>
+     <img src="https://avatars.githubusercontent.com/u/42980195?v=4">
   </body>
   
 </html>
