--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <body>
      <h1> Hello there, awesome person! </h1>
      <img src="https://avatars.githubusercontent.com/u/42980195?v=4">
+    
+      Favourite sites in order:
+     <ol>
+        <li>[Google SE](https://google.com)</li>
+        <li>[Google Classroom](https://classroom.google.com/)</li>
+        <li>[Gmail](https://mail.google.com/)</li>
+     </ol>
   </body>
   
 </html>
