Updating links in index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       Favourite sites in order:
      <ol>
         <li>[Google SE](https://google.com)</li>
-        <li>[Google Classroom](https://classroom.google.com/)</li>
-        <li>[Gmail](https://mail.google.com/)</li>
+        <li>[Google Classroom](https://classroom.google.com)</li>
+        <li>[Gmail](https://mail.google.com)</li>
      </ol>
   </body>
   
