Adding hyperlinks to index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     
       Favourite sites in order:
      <ol>
-        <li>[Google SE](https://google.com)</li>
-        <li>[Google Classroom](https://classroom.google.com)</li>
-        <li>[Gmail](https://mail.google.com)</li>
+        <li><a href="https://mail.google.com/">This is a link to Gmail!</a></li>
+        <li><a href="https://google.com">This is a link to Google!</a></li>
+        <li><a href="https://classroom.google.com/">This is a link to Google!</a></li>
      </ol>
   </body>
   
