Adding links to index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       Favourite sites in order:
      <ol>
         <li><a href="https://mail.google.com/">This is a link to Gmail!</a></li>
-        <li><a href="https://google.com">This is a link to Google!</a></li>
-        <li><a href="https://classroom.google.com/">This is a link to Google!</a></li>
+        <li><a href="https://google.com">This is a link to Google SE!</a></li>
+        <li><a href="https://classroom.google.com/">This is a link to Google Classroom!</a></li>
      </ol>
   </body>
   
