Adding style.css to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
      <title> Ben's Page! </title>
   </head> 
   
+  <link rel="stylesheet" href="style.css">.
+  
   <body>
      <h1> Hello there, awesome person! </h1>
      <img src="https://avatars.githubusercontent.com/u/42980195?v=4">
